Implement support for the left-margin property.

This completes the work on the test sample in http://bugs.kde.org/show_bug.cgi?id=154980

BUG:154980

svn path=/trunk/KDE/kdegraphics/okular/; revision=907544